Fixed BandMaths and NR

--- a/First Sentinel One Plot.ipynb
+++ b/First Sentinel One Plot.ipynb
@@ -5,7 +5,7 @@
    "id": "2ca82460-781e-4552-89ae-5530bab7290b",
    "metadata": {},
    "source": [
-    "**First Sentinel One Plot**"
+    "**First Sentinel One Plot (Unprocessed)**"
    ]
   },
   {
